--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "react-dom": ">=16.4.0"
   },
   "dependencies": {
-    "@types/lodash.debounce": "^4.0.6",
-    "@types/react": "^16.4.0",
-    "@types/react-dom": "^16.4.0",
+    "@types/lodash.debounce": "^4.0.7",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.10",
     "lodash.debounce": "^4.0.8",
-    "pdfjs-dist": "2.16.105",
-    "react-rnd": "^10.1.10"
+    "pdfjs-dist": "3.3.122",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-rnd": "^10.4.1"
   },
   "repository": {
     "type": "git",
@@ -49,12 +51,12 @@
     "url": "https://github.com/agentcooper/react-pdf-highlighter/issues"
   },
   "devDependencies": {
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "jest": "^27.1.0",
-    "jest-puppeteer": "^6.1.0",
-    "prettier": "^2.3.2",
-    "puppeteer": "^9.1.1",
-    "typescript": "4.4.2",
-    "vite": "^2.8.0"
+    "@vitejs/plugin-react": "^3.1.0",
+    "jest": "^29.4.2",
+    "jest-puppeteer": "^7.0.0",
+    "prettier": "^2.8.4",
+    "puppeteer": "^19.7.0",
+    "typescript": "4.9.5",
+    "vite": "^4.1.1"
   }
 }
