--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-pdf-highlighter",
-  "version": "5.6.0",
-  "description": "Set of React components for PDF annotation",
-  "author": "Artem Tyurin <artem.tyurin@gmail.com>",
+  "name": "v-pdf-highlighter",
+  "version": "1.0.1",
+  "description": "Set of React components for PDF annotation, fork of react-pdf-highlighter",
+  "author": "Joshua Lawrence <josh@velvetfs.com>",
   "license": "MIT",
   "keywords": [
     "pdf",
