--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "v-pdf-highlighter",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "description": "Set of React components for PDF annotation, fork of react-pdf-highlighter",
   "author": "Joshua Lawrence <josh@velvetfs.com>",
   "license": "MIT",
@@ -39,23 +39,42 @@
     "@types/react-dom": "^18.0.10",
     "lodash.debounce": "^4.0.8",
     "pdfjs-dist": "3.3.122",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": ">=16.4.0",
+    "react-dom": ">=16.4.0",
     "react-rnd": "^10.4.1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/agentcooper/react-pdf-highlighter.git"
+    "url": "git+https://github.com/velvetfs/v-pdf-highlighter.git"
   },
   "bugs": {
-    "url": "https://github.com/agentcooper/react-pdf-highlighter/issues"
+    "url": "https://github.com/velvet*/v-pdf-highlighter/issues"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.20.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.4.0",
+    "@types/node": "18.13.0",
+    "@types/react": "18.0.28",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "^8.34.0",
+    "eslint-config-next": "13.1.6",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-jest-dom": "^4.0.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
     "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2",
     "jest-puppeteer": "^7.0.0",
     "prettier": "^2.8.4",
     "puppeteer": "^19.7.0",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "4.9.5",
     "vite": "^4.1.1"
   }
